--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "moment": "^2.24.0",
-    "register-service-worker": "^1.6.2",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-pwa": "^4.3.1",
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-typescript": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
