--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.24.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-google-charts": "^0.3.2",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
