--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-pwa": "^4.3.1",
     "@vue/cli-plugin-router": "~4.2.0",
-    "@vue/cli-plugin-typescript": "~4.2.0",
+    "@vue/cli-plugin-typescript": "^4.5.11",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "sass": "^1.25.0",
